--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" href="./logo/icon.png">
 	<link rel="stylesheet" href="./stylesheets/index.css">
 	<link rel="stylesheet" href="./stylesheets/resume.css">
-	<link rel="stylesheet" href="./stylesheets/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css">
 	<title>沈东旭的简历</title>
 	<style>
 		aside {
@@ -210,7 +210,7 @@
 							<img src="./image/Biz.png" width="100%">
 							<ul>
 								<li>
-									这个项目使用<span class="highlight emphasize">原生JavaScript，DOM操作，BOM环境</span>，同时使用来一些库来实现页面效果。<br>
+									这个项目使用<span class="highlight emphasize">原生JavaScript，DOM操作，BOM</span>，同时使用来一些库来实现页面效果。<br>
 									使用<span class="highlight emphasize">Grid</span>进行整体布局，<span class="highlight emphasize">flex</span>进行局部调整。<br>
 									使用了Anime、Glide、Isotope、ScrollReveal、Smooth-Scroll等JS库。<br>
 								</li>
