--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<link rel="icon" href="./logo/icon.png">
+	<link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="./stylesheets/index.css">
 	<link rel="stylesheet" href="./stylesheets/resume.css">
 	<link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css">
