--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		<div id="resume-index" class="content visible">
 			<div class="container" style="margin:0;padding:0;width:100%;">
 				<header>
-					<img width="175" height="175" style="border-radius:50%;"
-						src="">
+					<img 
+						src="./image/my.png">
 					<h1>沈东旭</h1>
 					<div>
 						<div class="imWrap"><span class='highlight important'>教育背景</span><div>
@@ -125,7 +125,7 @@
 									学习去组织一个简单App的Store。
 								</li>
 								<li>
-									<span class="highlight important">技术栈</span> : React + Redux + React-Redux + React-Router+ SCSS + CSS3 
+									<span class="highlight important">技术栈</span> : React + Redux + React-Redux +React-Hook + React-Router+ SCSS + CSS3 
 								</li>
 								<li class="intro-highlight">
 									关于具体实现过程和遇到的问题请点击 ： <a class="intro-link"
@@ -343,7 +343,7 @@
 						</li>
 						<li>
 							了解<span class='highlight emphasize'>前端模块化</span>了解<span
-								class='highlight emphasize'>Webpack打包，</span>
+								class='highlight emphasize'>Webpack打包</span>。
 						</li>
 						<li>
 							<span class='highlight important'>英语能力良好</span>（担任过文献翻译的工作），能够流畅阅读英文材料，
@@ -393,7 +393,7 @@
 					<li>
 						<div class="title">学习经历</div>
 						<div>
-							2017.9-2019.5在中国石油大学(北京)进行研究生阶段学习，并获得多次奖学金，
+							2017.9-2019.5在中国石油大学(北京)进行研究生阶段学习，地质工程(井筒地球物理方向)。并获得多次奖学金，
 							<div>两次研究生二等优秀学业奖学金(2017-2018, 2018-2019)</div>
 							<div>中国石油大学（北京）优秀生源奖学金</div>
 							<div>研究生学术论坛优秀奖</div>
