--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							<h2 id="coderpad">TomTodo-单页Todo应用</h2>
 							<time>2020.2</time>
 							<div class="wrapImg">
-								<img src="./image/TomTodo.png" width="300px">
+								<img src="https://pic.downk.cc/item/5e7830805c5609112957e9e3.png" width="300px">
 							</div>
 							<ul>
 								<li>
@@ -140,7 +140,7 @@
 						<div class="cbp_tmlabel">
 							<h2 id="byemess">CNode-使用React实现的CNode社区</h2>
 							<time>2020.01</time>
-							<img src="./image/CNode.png" width="100%">
+							<img src="https://pic.downk.cc/item/5e7830805c5609112957e9bc.png" width="100%">
 							<ul>
 								<li>
 									这个项目主要实践使用<span class="highlight emphasize">React-Router</span>组织页面。<br>
@@ -170,7 +170,7 @@
 						<div class="cbp_tmlabel">
 							<h2 id="webpackdemo">Orange UI-使用VUE实现的小型UI库</h2>
 							<time>2019.12</time>
-							<img src="./image/Orange.png" width="100%">
+							<img src="https://pic.downk.cc/item/5e7830805c5609112957e9d9.png" width="100%">
 							<ul>
 								<li>
 									Orange UI 是一个小型的 UI 框架，提供了一些常用组件，适合桌面端使用。
@@ -207,7 +207,7 @@
 						<div class="cbp_tmlabel">
 							<h2 id="webpackdemo">橙子科技-商业化首页</h2>
 							<time>2020.02</time>
-							<img src="./image/Biz.png" width="100%">
+							<img src="https://pic.downk.cc/item/5e7830b75c56091129582e48.png" width="100%">
 							<ul>
 								<li>
 									这个项目使用<span class="highlight emphasize">原生JavaScript，DOM操作，BOM</span>，同时使用来一些库来实现页面效果。<br>
@@ -236,7 +236,7 @@
 						<div class="cbp_tmlabel">
 							<h2 id="webpackdemo">MYNAV-一个键盘导航网站</h2>
 							<time>2019.06</time>
-							<img src="./image/MYNAV.png" width="100%">
+							<img src="https://pic.downk.cc/item/5e7830805c5609112957e9cd.png" width="100%">
 							<ul>
 								<li>
 									这个项目使用<span class="highlight emphasize">原生JavaScript</span>，实现一个可自定义的键盘导航网站。<br>
@@ -265,7 +265,7 @@
 						<div class="cbp_tmlabel">
 							<h2 id="webpackdemo">PaintPad-canvas画板</h2>
 							<time>2019.06</time>
-							<img src="./image/canvas.png" width="100%">
+							<img src="https://pic.downk.cc/item/5e7830805c5609112957e9b1.png" width="100%">
 							<ul>
 								<li>
 									使用<span class="highlight emphasize">canvas</span>，实现的一个个人画板项目。<br>
