添加二维码

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
 									学习去组织一个简单App的Store。
 								</li>
 								<li>
+									<span>可在桌面端使用，移动端<span class="highlight emphasize">扫码体验</span>更加:</span></br>
+									<img src="https://pic.downk.cc/item/5e783a805c56091129608943.png" width="100px" style="margin-left: 120px;">
+								</li>
+								<li>
 									<span class="highlight important">技术栈</span> : React + Redux + React-Redux +React-Hook + React-Router+ SCSS + CSS3 
 								</li>
 								<li class="intro-highlight">
