--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./stylesheets/index.css">
 	<link rel="stylesheet" href="./stylesheets/resume.css">
 	<link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css">
-	<title>沈东旭的简历</title>
+	<title>沈东旭-前端岗位</title>
 	<style>
 		aside {
 			background: rgb(27, 50, 84);
@@ -243,9 +243,9 @@
 							<img src="https://pic.downk.cc/item/5e7830805c5609112957e9cd.png" width="100%">
 							<ul>
 								<li>
-									这个项目使用<span class="highlight emphasize">原生JavaScript</span>，实现一个可自定义的键盘导航网站。<br>
+									这个项目使用<span class="highlight emphasize">原生JavaScript</span>，监听键盘事件，实现一个可自定义的导航网站。<br>
 									同时加入了百度<span class="highlight emphasize">搜索功能</span>。<br>
-									加深了对<span>事件对象, Web Storage</span>的理解<br>
+									加深了对<span  class="highlight emphasize">浏览器Storage</span>的理解<br>
 								</li>
 								<li>
 									<span class="highlight important">技术栈</span> : JavaScript + HTML5 + LocalStorage + CSS3 + Media Query
@@ -272,8 +272,8 @@
 							<img src="https://pic.downk.cc/item/5e7830805c5609112957e9b1.png" width="100%">
 							<ul>
 								<li>
-									使用<span class="highlight emphasize">canvas</span>，实现的一个个人画板项目。<br>
-									能在桌面端和移动端使用<br>
+									使用HTML5<span class="highlight emphasize">canvas</span>，实现的画板项目。<br>
+									能在桌面端和<span>移动端使用</span><br>
 									可以以图像形式<span class="highlight emphasize">保存</span>画板内容<span><br>
 									对移动端兼容进行了实践<br>
 								</li>
@@ -311,7 +311,10 @@
 				<div class="description">
 					<ul class="des-chunk">
 						<li>
-							熟练掌握HTML(5)和常用CSS(3)，熟悉Gird、Flex布局。具有
+							熟练掌握HTML5和常用CSS3，熟悉
+							<span class='highlight emphasize'>Gird</span>，
+							<span class='highlight emphasize'>Flex</span>
+							、布局。具有
 							<span class='highlight emphasize'>平均水准之上</span> 的审美，追求设计的优雅。
 						</li>
 						<li>
@@ -322,28 +325,30 @@
 							<span class='highlight emphasize'>面向对象</span>，
 							<span class='highlight emphasize'>异步流程控制</span>，
 							<span class='highlight emphasize'>DOM</span>，
-							<span class='highlight emphasize'>Ajax、Jsonp</span>，
+							<span class='highlight emphasize'>Ajax</span>，
+							<span class='highlight emphasize'>跨域</span>，
 							<span class='highlight emphasize'>ES6</span> 部分新特性。
 						</li>
 						<li>
-							熟悉React框架及相关流行库(如：Ant Design)的使用，<span class='highlight important'>理解重要概念</span>如：生命周期，异步更新，高阶组件，常用hook，异步action, 单向数据流。了解Redux
+							熟悉React框架及相关流行库(如：Ant Design)的使用，<span class='highlight important'>理解重要概念</span>如：immutable数据，生命周期，异步更新，高阶组件，常用hook，异步action, 单向数据流。有Redux
 							Store设计实践，通过React-Router进行页面内容分发，并有
-							<span class='highlight important'>相关项目的经验。</span>
+							<span class='highlight important'>相关项目的经验</span>。
 						</li>
 						<li>
 							使用过Vue框架熟悉Vue模版语法，并有
-							<span class='highlight important'>相关项目经验。</span>
+							<span class='highlight important'>相关项目经验</span>。
 						</li>
 					</ul>
 
 					<ul class="des-chunk">
 
 						<li>
-							熟悉<span class='highlight emphasize'>HTTP协议</span>及浏览器<span class='highlight emphasize'>渲染原理</span>，了解前端
+							了解<span class='highlight emphasize'>HTTP协议</span>及浏览器<span class='highlight emphasize'>工作原理</span>，了解浏览器端
+							<span class='highlight emphasize'>Event loop</span>和前端
 							<span class='highlight emphasize'>性能优化</span>策略。
 						</li>
 						<li>
-							熟悉<span class='highlight emphasize'>Yarn & Npm & Git </span>
+							熟悉<span class='highlight emphasize'>Yarn & Npm & Git </span>。
 						</li>
 						<li>
 							了解<span class='highlight emphasize'>前端模块化</span>了解<span
@@ -355,7 +360,7 @@
 							拥有总结书写<span class='highlight emphasize'><a href="https://www.jianshu.com/u/3d6709cf867d">笔记和博客(点击进入)</a></span>的习惯。
 						</li>
 						<li>
-							对学习后端有强烈兴趣
+							对学习后端有强烈兴趣。
 						</li>
 					</ul>
 				</div>
@@ -397,9 +402,9 @@
 					<li>
 						<div class="title">学习经历</div>
 						<div>
-							2017.9-2019.5在中国石油大学(北京)进行研究生阶段学习，地质工程(井筒地球物理方向)。并获得多次奖学金，
-							<div>两次研究生二等优秀学业奖学金(2017-2018, 2018-2019)</div>
-							<div>中国石油大学（北京）优秀生源奖学金</div>
+							2017.9-2019.5在中国石油大学（北京）进行研究生课程学习，地质工程（井筒地球物理方向，并获得多次奖学金。
+							<div>两次研究生二等优秀学业奖学金（2017-2018, 2018-2019学年）</div>
+							<div>中国石油大学（北京）优秀生源奖学金（2017）</div>
 							<div>研究生学术论坛优秀奖</div>
 							<div>地球物理与信息学院秋季足球赛季军</div>
 						</div>
