--- a/index.html
+++ b/index.html
@@ -402,9 +402,9 @@
 					<li>
 						<div class="title">学习经历</div>
 						<div>
-							2017.9-2019.5在中国石油大学（北京）进行研究生课程学习，地质工程（井筒地球物理方向，并获得多次奖学金。
+							2017.9-2019.5在中国石油大学（北京）进行研究生课程学习，地质工程（井筒地球物理方向），并获得多次奖学金。
 							<div>两次研究生二等优秀学业奖学金（2017-2018, 2018-2019学年）</div>
-							<div>中国石油大学（北京）优秀生源奖学金（2017）</div>
+							<div>中国石油大学（北京）优秀生源奖学金</div>
 							<div>研究生学术论坛优秀奖</div>
 							<div>地球物理与信息学院秋季足球赛季军</div>
 						</div>
