--- a/index.html
+++ b/index.html
@@ -112,6 +112,43 @@
 				<ul class="cbp_tmtimeline">
 					<li>
 						<div class="cbp_tmlabel">
+							<h2 id="webpackdemo">Orange UI-使用VUE实现的小型UI库</h2>
+							<time>2019.12</time>
+							<img src="https://pic.downk.cc/item/5e7830805c5609112957e9d9.png" width="100%">
+							<ul>
+								<li>
+									Orange UI 是一个小型的 UI 框架，提供了一些常用组件，适合桌面端使用。
+								</li>
+								<li>
+									组件包括：Button按钮、Input输入框、Grid网格、Layout布局、Toast吐司、Tabs标签页、Popover气泡卡片、Collapse折叠面。
+								</li>
+								<li>
+									<span class="highlight important">技术栈</span> : VUE + SCSS + Parcel
+								</li>
+								<li class="intro-highlight">
+									一些组件实现总结：
+									<a class="intro-link"
+										href="">
+										请点击链接
+									</a>
+								</li>
+								<li class="skill">
+									<span class="link">
+										<a target="_blank"
+											href="https://majordong.github.io/Orange/">
+											Try it
+										</a>
+									</span>
+									<span class="link">
+										<a target="_blank"
+											href="https://github.com/MajorDong/Orange">
+											Github
+										</a>
+									</span>
+								</li>
+							</ul>
+						</div>
+						<div class="cbp_tmlabel">
 							<h2 id="coderpad">TomTodo-单页Todo应用</h2>
 							<time>2020.2</time>
 							<div class="wrapImg">
@@ -171,43 +208,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="cbp_tmlabel">
-							<h2 id="webpackdemo">Orange UI-使用VUE实现的小型UI库</h2>
-							<time>2019.12</time>
-							<img src="https://pic.downk.cc/item/5e7830805c5609112957e9d9.png" width="100%">
-							<ul>
-								<li>
-									Orange UI 是一个小型的 UI 框架，提供了一些常用组件，适合桌面端使用。
-								</li>
-								<li>
-									组件包括：Button按钮、Input输入框、Grid网格、Layout布局、Toast吐司、Tabs标签页、Popover气泡卡片、Collapse折叠面。
-								</li>
-								<li>
-									<span class="highlight important">技术栈</span> : VUE + SCSS + Parcel
-								</li>
-								<li class="intro-highlight">
-									一些组件实现总结：
-									<a class="intro-link"
-										href="">
-										请点击链接
-									</a>
-								</li>
-								<li class="skill">
-									<span class="link">
-										<a target="_blank"
-											href="https://majordong.github.io/Orange/">
-											Try it
-										</a>
-									</span>
-									<span class="link">
-										<a target="_blank"
-											href="https://github.com/MajorDong/Orange">
-											Github
-										</a>
-									</span>
-								</li>
-							</ul>
-						</div>
+						
 						<div class="cbp_tmlabel">
 							<h2 id="webpackdemo">橙子科技-商业化首页</h2>
 							<time>2020.02</time>
@@ -337,6 +338,10 @@
 						<li>
 							使用过Vue框架熟悉Vue模版语法，并有
 							<span class='highlight important'>相关项目经验</span>。
+						</li>
+						<li>
+							熟悉
+							<span class='highlight important'>移动端</span>兼容，有相关项目经验。
 						</li>
 					</ul>
 
