--- a/index.html
+++ b/index.html
@@ -125,13 +125,6 @@
 								<li>
 									<span class="highlight important">技术栈</span> : VUE + SCSS + Parcel
 								</li>
-								<li class="intro-highlight">
-									一些组件实现总结：
-									<a class="intro-link"
-										href="">
-										请点击链接
-									</a>
-								</li>
 								<li class="skill">
 									<span class="link">
 										<a target="_blank"
@@ -195,12 +188,6 @@
 								<li class="intro-highlight">
 									关于项目问题+解决方案请点击： <a class="intro-link"
 										href="https://github.com/MajorDong/react-cnode">关于CNode实现</a>
-								</li>
-								<li class="intro-highlight">
-									学习react做的小DEMO：
-									<a class="intro-link" href="https://github.com/kylewh/Dive_Into_React_Redux">
-										DEMO
-									</a>
 								</li>
 								<li class="skill">
 									<span class="link"><a target="_blank" href="https://majordong.github.io/react-cnode/#/index/all&page=1">Try it</a></span>
@@ -336,8 +323,9 @@
 							<span class='highlight important'>相关项目的经验</span>。
 						</li>
 						<li>
-							使用过Vue框架熟悉Vue模版语法，并有
-							<span class='highlight important'>相关项目经验</span>。
+							使用过Vue框架熟悉Vue模版语法，
+							理解<span class='highlight important'>响应式原理</span>	
+							并有<span class='highlight important'>相关项目经验</span>。
 						</li>
 						<li>
 							熟悉
