--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@
 							<span class='highlight emphasize'>面向对象</span>，
 							<span class='highlight emphasize'>异步流程控制</span>，
 							<span class='highlight emphasize'>DOM</span>，
-							<span class='highlight emphasize'>Ajax</span>，
+							<span class='highlight emphasize'>AJAX</span>，
+							<span class='highlight emphasize'>JSONP</span>，
 							<span class='highlight emphasize'>跨域</span>，
 							<span class='highlight emphasize'>ES6</span> 部分新特性。
 						</li>
