--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./stylesheets/index.css">
 	<link rel="stylesheet" href="./stylesheets/resume.css">
 	<link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css">
-	<title>沈东旭-前端岗位</title>
+	<title>前端求职2020-沈东旭</title>
 	<style>
 		aside {
 			background: rgb(27, 50, 84);
@@ -30,7 +30,7 @@
 <body>
 	<div class="page-wrapper clear-fix">
 		<aside>
-			<a href="#" class="myname" style="color: #ffffff;">沈东旭的简历</a>
+			<a href="#" class="myname" style="color: #ffffff;">沈东旭</a>
 			<div class="menu">
 				<div class="menubox">
 					<div class="menuinner"></div>
@@ -78,7 +78,7 @@
 					</div>
 					<div>
 						<div><span class='highlight important'>意向职位</span></div>
-						<strong>前端开发工程师</strong> 并对学习后端有很强兴趣
+						<strong>初级前端开发工程师</strong> 并对学习后端有很强兴趣
 					</div>
 					<div >
 						<div><span class='highlight important'>联系方式</span></div>
