--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 				<ul class="wrapper">
 					<li>
 						<div class="title">自学前端</div>
-						<div>自学前端大半年时间</div>
+						<div>2019.6月开始自学前端知识</div>
 					</li>
 					<li>
 						<div class="title">学习经历</div>
