--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div id="resume-index" class="content visible">
 			<div class="container" style="margin:0;padding:0;width:100%;">
 				<header>
-					<img 
+					<img style="width: 125px; "
 						src="./image/my.png">
 					<h1>沈东旭</h1>
 					<div>
@@ -78,7 +78,7 @@
 					</div>
 					<div>
 						<div><span class='highlight important'>意向职位</span></div>
-						<strong>初级前端开发工程师</strong> 并对学习后端有很强兴趣
+						<strong>前端开发工程师</strong> 
 					</div>
 					<div >
 						<div><span class='highlight important'>联系方式</span></div>
