--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
 							</div>
 							<ul>
 								<li>
-									<span class="highlight emphasize">一个使用React & React-Redux & Redux实现的todo应用</span>，在学习React和Redux的时候，不停的在做Todo的小例子去加深理解<br>
-									想把这些小例子进行扩展，去理解学习更多的React特性。<br>
+									<span class="highlight emphasize">一个使用React & React-Redux & Redux实现的todo应用</span>,
 									在Dribbble上看到了一个很好看的Todo App的设计，就想着能不能实现它。<br>
 									学习去组织一个简单App的Store。
 								</li>
