--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 					<ul class="des-chunk">
 						<li>
 							熟练掌握HTML5和常用CSS3，熟悉
-							<span class='highlight emphasize'>Gird</span>，
+							<span class='highlight emphasize'>Grid</span>，
 							<span class='highlight emphasize'>Flex</span>
 							、布局。具有
 							<span class='highlight emphasize'>平均水准之上</span> 的审美，追求设计的优雅。
