--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					</div>
 					<div>
 						<div><span class='highlight important'>意向职位</span></div>
-						<strong>前端开发工程师</strong> 
+						<strong>初级前端开发工程师</strong> 
 					</div>
 					<div >
 						<div><span class='highlight important'>联系方式</span></div>
